--- a/apps/tic_tac_toe/templates/tic_tac_toe/index.html
+++ b/apps/tic_tac_toe/templates/tic_tac_toe/index.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
 <a href="#">Создать комнату</a> <br>
 <a href="#">Присоедениться к игре</a> <br>
 <a href="#">Открытые комнаты</a> <br>
-</body>
-</html>
+{% endblock %}
