add create game room

--- a/apps/tic_tac_toe/templates/tic_tac_toe/index.html
+++ b/apps/tic_tac_toe/templates/tic_tac_toe/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<a href="#">Создать комнату</a> <br>
+<a href="{% url 'ttt_create_room' %}">Создать комнату</a> <br>
 <a href="#">Присоедениться к игре</a> <br>
 <a href="#">Открытые комнаты</a> <br>
 {% endblock %}
