--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h1>qwqeqweqwewe<h1/>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+Главная
+{% endblock %}
