--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,40 @@
     {% block head %}{% endblock %}
 </head>
 <body>
+<nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">Главная</a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'ttt_menu' %}">Крестики Нолики</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Покер</a>
+                </li>
+                <li class="nav-item">
+
+                </li>
+            </ul>
+            <span class="navbar-text">
+                        {% if user.is_authenticated %}
+                            <form method="post" id="logout-form" action="{% url 'logout' %}?next={% url 'login' %}">
+                    {% csrf_token %}
+                    <a href="#" class="nav-link" onclick="document.getElementById('logout-form').submit();">Выйти [{{ user }}]</a>
+                </form>
+                        {% else %}
+                            <a class="nav-link" href="{% url 'login' %}">Войти</a>
+                        {% endif %}            </span>
+        </div>
+    </div>
+</nav>
+<br>
 {% block content %}{% endblock %}
 </body>
 </html>
